# cxx-project

./: .gitignore  CMakeLists.txt  README.md  build.py
.github/workflows/: build-and-test.yml  codecov.yml  linux.yml
cmake/: config.cmake  fetch-deps.cmake
source/cxx-project/core/: CMakeLists.txt
source/test/unittests/: CMakeLists.txt
tools/: build-deps.py  gen-cmake.py  gen-vs.py
tools/vs/: sln.in  vcxproj.in
